cabal-version: 2.0

name: mitchell-stdlib
version: 0.1.0
build-type: Simple
category: Prelude
license: BSD3
license-file: LICENSE
tested-with: GHC == 8.4.3

--------------------------------------------------------------------------------
-- Flags
--------------------------------------------------------------------------------

flag all
  description: Add all dependencies
  default: False
  manual: True

----------------
-- Flags
-- default: True
----------------

flag dep-bytestring
  description: bytestring dependency
  default: True
  manual: True

flag dep-containers
  description: containers dependency
  default: True
  manual: True

flag dep-text
  description: text dependency
  default: True
  manual: True

-----------------
-- Flags
-- default: False
-----------------

flag dep-aeson
  description: aeson dependency
  default: False
  manual: True

flag dep-aeson-pretty
  description: aeson-pretty dependency
  default: False
  manual: True

flag dep-aeson-qq
  description: aeson-qq dependency
  default: False
  manual: True

flag dep-ansi-terminal
  description: ansi-terminal dependency
  default: False
  manual: True

flag dep-approximate
  description: dep-approximate dependency
  default: False
  manual: True

flag dep-array
  description: array dependency
  default: False
  manual: True

flag dep-async
  description: async dependency
  default: False
  manual: True

flag dep-atomic-primops
  description: atomic-primops dependency
  default: False
  manual: True

flag dep-base16-bytestring
  description: base16-bytestring dependency
  default: False
  manual: True

flag dep-bits
  description: bits dependency
  default: False
  manual: True

flag dep-bytestring-lexing
  description: bytestring-lexing dependency
  default: False
  manual: True

flag dep-bytestring-trie
  description: bytestring-trie dependency
  default: False
  manual: True

flag dep-case-insensitive
  description: case-insensitive dependency
  default: False
  manual: True

flag dep-comonad
  description: comonad dependency
  default: False
  manual: True

flag dep-compact
  description: compact dependency
  default: False
  manual: True

flag dep-constraints
  description: constraints dependency
  default: False
  manual: True

flag dep-contravariant
  description: contravariant dependency
  default: False
  manual: True

flag dep-contravariant-extras
  description: contravariant-extras dependency
  default: False
  manual: True

flag dep-deepseq
  description: deepseq dependency
  default: False
  manual: True

flag dep-directory
  description: directory dependency
  default: False
  manual: True

flag dep-distributive
  description: distributive dependency
  default: False
  manual: True

flag dep-dlist
  description: dlist dependency
  default: False
  manual: True

flag dep-earley
  description: Earley dependency
  default: False
  manual: True

flag dep-envparse
  description: envparse dependency
  default: False
  manual: True

flag dep-erf
  description: erf dependency
  default: False
  manual: True

flag dep-extra
  description: extra dependency
  default: False
  manual: True

flag dep-fgl
  description: fgl dependency
  default: False
  manual: True

flag dep-filepath
  description: filepath dependency
  default: False
  manual: True

flag dep-foldl
  description: foldl dependency
  default: False
  manual: True

flag dep-gauge
  description: gauge dependency
  default: False
  manual: True

flag dep-generic-aeson
  description: generic-aeson dependency
  default: False
  manual: True

flag dep-half
  description: half dependency
  default: False
  manual: True

flag dep-hashable
  description: hashable dependency
  default: False
  manual: True

flag dep-hedgehog
  description: hedgehog dependency
  default: False
  manual: True

flag dep-heaps
  description: heaps dependency
  default: False
  manual: True

flag dep-lens
  description: lens dependency
  default: False
  manual: True

flag dep-lens-aeson
  description: lens-aeson dependency
  default: False
  manual: True

flag dep-list-transformer
  description: list-transformer dependency
  default: False
  manual: True

flag dep-logict
  description: logict dependency
  default: False
  manual: True

flag dep-managed
  description: managed dependency
  default: False
  manual: True

flag dep-megaparsec
  description: megaparsec dependency
  default: False
  manual: True

flag dep-mmorph
  description: mmorph dependency
  default: False
  manual: True

flag dep-monad-ste
  description: monad-ste dependency
  default: False
  manual: True

flag dep-mtl
  description: mtl dependency
  default: False
  manual: True

flag dep-multiset
  description: multiset dependency
  default: False
  manual: True

flag dep-mwc-random
  description: mwc-random dependency
  default: False
  manual: True

flag dep-network
  description: network dependency
  default: False
  manual: True

flag dep-network-uri
  description: network-uri dependency
  default: False
  manual: True

flag dep-nf
  description: nf dependency
  default: False
  manual: True

flag dep-optparse-applicative
  description: optparse-applicative dependency
  default: False
  manual: True

flag dep-parallel
  description: parallel dependency
  default: False
  manual: True

flag dep-prettyprinter
  description: prettyprinter dependency
  default: False
  manual: True

flag dep-primitive
  description: primitive dependency
  default: False
  manual: True

flag dep-profunctors
  description: profunctors dependency
  default: False
  manual: True

flag dep-psqueues
  description: psqueues dependency
  default: False
  manual: True

flag dep-reactive-banana
  description: reactive-banana dependency
  default: False
  manual: False

flag dep-reflection
  description: reflection dependency
  default: False
  manual: True

flag dep-regex-applicative
  description: regex-applicative dependency
  default: False
  manual: True

flag dep-safe-exceptions
  description: safe-exceptions dependency
  default: False
  manual: True

flag dep-scientific
  description: scientific dependency
  default: False
  manual: True

flag dep-semigroups
  description: semigroups dependency
  default: False
  manual: True

flag dep-semilattices
  description: semilattices dependency
  default: False
  manual: True

flag dep-stm
  description: stm dependency
  default: False
  manual: True

flag dep-stm-chans
  description: stm-chans dependency
  default: False
  manual: True

flag dep-stm-containers
  description: stm-containers dependency
  default: False
  manual: True

flag dep-tagged
  description: tagged dependency
  default: False
  manual: True

flag dep-text-short
  description: text-short dependency
  default: False
  manual: True

flag dep-time
  description: time dependency
  default: False
  manual: True

flag dep-transformers
  description: transformers dependency
  default: False
  manual: True

flag dep-transformers-base
  description: transformers-base dependency
  default: False
  manual: True

flag dep-typed-process
  description: typed-process dependency
  default: False
  manual: True

flag dep-unagi-chan
  description: unagi-chan dependency
  default: False
  manual: True

flag dep-unix
  description: unix dependency
  default: False
  manual: True

flag dep-unliftio
  description: unliftio dependency
  default: False
  manual: True

flag dep-unordered-containers
  description: unordered-containers dependency
  default: False
  manual: True

flag dep-vector
  description: vector dependency
  default: False
  manual: True

flag dep-weigh
  description: weigh dependency
  default: False
  manual: True

flag dep-writer-cps-mtl
  description: writer-cps-mtl dependency
  default: False
  manual: True

--------------------------------------------------------------------------------
-- Library
--------------------------------------------------------------------------------

library
  hs-source-dirs: .
  ghc-options: -Wall
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

  -- Reexport base for convenience. Some of these are actually required for
  -- various purposes:
  --
  --   Control.Monad      -- :main
  --   Control.Exception  -- Paths_
  --   Data.Version       -- Paths_
  --   GHC.Base           -- ghci
  --   Prelude            -- Paths_
  --   System.Environment -- ghci
  --   System.IO          -- ghci
  reexported-modules:
      base:Control.Applicative
    , base:Control.Arrow
    , base:Control.Category
    , base:Control.Concurrent
    , base:Control.Concurrent.Chan
    , base:Control.Concurrent.MVar
    , base:Control.Concurrent.QSem
    , base:Control.Concurrent.QSemN
    , base:Control.Exception
    , base:Control.Exception.Base
    , base:Control.Monad
    , base:Control.Monad.Fail
    , base:Control.Monad.Fix
    , base:Control.Monad.Instances
    , base:Control.Monad.IO.Class
    , base:Control.Monad.ST
    , base:Control.Monad.ST.Lazy
    , base:Control.Monad.ST.Lazy.Safe
    , base:Control.Monad.ST.Lazy.Unsafe
    , base:Control.Monad.ST.Safe
    , base:Control.Monad.ST.Strict
    , base:Control.Monad.ST.Unsafe
    , base:Control.Monad.Zip
    , base:Data.Bifoldable
    , base:Data.Bifunctor
    , base:Data.Bitraversable
    , base:Data.Bits
    , base:Data.Bool
    , base:Data.Char
    , base:Data.Coerce
    , base:Data.Complex
    , base:Data.Data
    , base:Data.Dynamic
    , base:Data.Either
    , base:Data.Eq
    , base:Data.Fixed
    , base:Data.Foldable
    , base:Data.Function
    , base:Data.Functor
    , base:Data.Functor.Classes
    , base:Data.Functor.Compose
    , base:Data.Functor.Const
    , base:Data.Functor.Identity
    , base:Data.Functor.Product
    , base:Data.Functor.Sum
    , base:Data.IORef
    , base:Data.Int
    , base:Data.Ix
    , base:Data.Kind
    , base:Data.List
    , base:Data.List.NonEmpty
    , base:Data.Maybe
    , base:Data.Monoid
    , base:Data.Ord
    , base:Data.Proxy
    , base:Data.Ratio
    , base:Data.Semigroup
    , base:Data.STRef
    , base:Data.STRef.Lazy
    , base:Data.STRef.Strict
    , base:Data.String
    , base:Data.Traversable
    , base:Data.Tuple
    , base:Data.Type.Bool
    , base:Data.Type.Coercion
    , base:Data.Type.Equality
    , base:Data.Typeable
    , base:Data.Unique
    , base:Data.Version
    , base:Data.Void
    , base:Data.Word
    , base:Debug.Trace
    , base:Foreign
    , base:Foreign.C
    , base:Foreign.C.Error
    , base:Foreign.C.String
    , base:Foreign.C.Types
    , base:Foreign.Concurrent
    , base:Foreign.ForeignPtr
    , base:Foreign.ForeignPtr.Safe
    , base:Foreign.ForeignPtr.Unsafe
    , base:Foreign.Marshal
    , base:Foreign.Marshal.Alloc
    , base:Foreign.Marshal.Array
    , base:Foreign.Marshal.Error
    , base:Foreign.Marshal.Pool
    , base:Foreign.Marshal.Safe
    , base:Foreign.Marshal.Unsafe
    , base:Foreign.Marshal.Utils
    , base:Foreign.Ptr
    , base:Foreign.Safe
    , base:Foreign.StablePtr
    , base:Foreign.Storable
    , base:GHC.Arr
    , base:GHC.Base
    , base:GHC.Char
    , base:GHC.Conc
    , base:GHC.Conc.IO
    , base:GHC.Conc.Signal
    , base:GHC.Conc.Sync
    , base:GHC.ConsoleHandler
    , base:GHC.Constants
    , base:GHC.Desugar
    , base:GHC.Enum
    , base:GHC.Environment
    , base:GHC.Err
    , base:GHC.Exception
    , base:GHC.ExecutionStack
    , base:GHC.ExecutionStack.Internal
    , base:GHC.Exts
    , base:GHC.Fingerprint
    , base:GHC.Fingerprint.Type
    , base:GHC.Float
    , base:GHC.Float.ConversionUtils
    , base:GHC.Float.RealFracMethods
    , base:GHC.Foreign
    , base:GHC.ForeignPtr
    , base:GHC.GHCi
    , base:GHC.Generics
    , base:GHC.IO
    , base:GHC.IO.Buffer
    , base:GHC.IO.BufferedIO
    , base:GHC.IO.Device
    , base:GHC.IO.Encoding
    , base:GHC.IO.Encoding.CodePage
    , base:GHC.IO.Encoding.Failure
    , base:GHC.IO.Encoding.Iconv
    , base:GHC.IO.Encoding.Latin1
    , base:GHC.IO.Encoding.Types
    , base:GHC.IO.Encoding.UTF16
    , base:GHC.IO.Encoding.UTF32
    , base:GHC.IO.Encoding.UTF8
    , base:GHC.IO.Exception
    , base:GHC.IO.FD
    , base:GHC.IO.Handle
    , base:GHC.IO.Handle.FD
    , base:GHC.IO.Handle.Internals
    , base:GHC.IO.Handle.Lock
    , base:GHC.IO.Handle.Text
    , base:GHC.IO.Handle.Types
    , base:GHC.IO.IOMode
    , base:GHC.IO.Unsafe
    , base:GHC.IOArray
    , base:GHC.IORef
    , base:GHC.Int
    , base:GHC.List
    , base:GHC.MVar
    , base:GHC.Natural
    , base:GHC.Num
    , base:GHC.OldList
    , base:GHC.OverloadedLabels
    , base:GHC.PArr
    , base:GHC.Pack
    , base:GHC.Profiling
    , base:GHC.Ptr
    , base:GHC.Read
    , base:GHC.Real
    , base:GHC.Records
    , base:GHC.RTS.Flags
    , base:GHC.ST
    , base:GHC.StaticPtr
    , base:GHC.STRef
    , base:GHC.Show
    , base:GHC.Stable
    , base:GHC.Stack
    , base:GHC.Stack.CCS
    , base:GHC.Stack.Types
    , base:GHC.Stats
    , base:GHC.Storable
    , base:GHC.TopHandler
    , base:GHC.TypeLits
    , base:GHC.TypeNats
    , base:GHC.Unicode
    , base:GHC.Weak
    , base:GHC.Word
    , base:Numeric
    , base:Numeric.Natural as Base.Numeric.Natural
    , base:Prelude
    , base:System.CPUTime
    , base:System.Console.GetOpt
    , base:System.Environment
    , base:System.Exit
    , base:System.IO
    , base:System.IO.Error
    , base:System.IO.Unsafe
    , base:System.Info
    , base:System.Mem
    , base:System.Mem.StableName
    , base:System.Mem.Weak
    , base:System.Posix.Internals
    , base:System.Posix.Types
    , base:System.Timeout
    , base:Text.ParserCombinators.ReadP
    , base:Text.ParserCombinators.ReadPrec
    , base:Text.Printf
    , base:Text.Read
    , base:Text.Read.Lex
    , base:Text.Show
    , base:Text.Show.Functions
    , base:Type.Reflection
    , base:Type.Reflection.Unsafe
    , base:Unsafe.Coerce
  if impl(ghc >= 8.4)
    reexported-modules:
        base:GHC.ByteOrder
      , base:GHC.Clock
      , base:System.Environment.Blank

  ------------------------------------------------------------------------------
  -- Dependencies
  ------------------------------------------------------------------------------

  build-depends: base >= 4.10 && < 4.12

  if flag(dep-aeson) || flag(all)
    build-depends: aeson ^>= 1.3.1 || ^>= 1.4.0
    cpp-options: -DDEP_AESON

  if flag(dep-aeson-pretty) || flag(all)
    build-depends: aeson-pretty ^>= 0.8.7
    cpp-options: -DDEP_AESON_PRETTY

  if flag(dep-aeson-qq) || flag(all)
    build-depends: aeson-qq ^>= 0.8.2
    cpp-options: -DDEP_AESON_QQ

  if flag(dep-ansi-terminal) || flag(all)
    build-depends: ansi-terminal ^>= 0.8.0
    cpp-options: -DDEP_ANSI_TERMINAL

  if flag(dep-approximate) || flag(all)
    build-depends: approximate ^>= 0.3.1
    cpp-options: -DDEP_APPROXIMATE

  if flag(dep-array) || flag(all)
    build-depends: array ^>= 0.5.2
    cpp-options: -DDEP_ARRAY

  if flag(dep-async) || flag(all)
    build-depends: async ^>= 2.2.1
    cpp-options: -DDEP_ASYNC

  if flag(dep-atomic-primops) || flag(all)
    build-depends: atomic-primops ^>= 0.8
    cpp-options: -DDEP_ATOMIC_PRIMOPS

  if flag(dep-base16-bytestring) || flag(all)
    build-depends: base16-bytestring ^>= 0.1.1
    cpp-options: -DDEP_BASE16_BYTESTRING

  if flag(dep-bits) || flag(all)
    build-depends: bits ^>= 0.5.0
    cpp-options: -DDEP_BITS

  if flag(dep-bytestring) || flag(all)
    build-depends: bytestring ^>= 0.10.8
    cpp-options: -DDEP_BYTESTRING

  if flag(dep-bytestring-lexing) || flag(all)
    build-depends: bytestring-lexing ^>= 0.5.0
    cpp-options: -DDEP_BYTESTRING_LEXING

  if flag(dep-bytestring-trie) || flag(all)
    build-depends: bytestring-trie ^>= 0.2.4
    cpp-options: -DDEP_BYTESTRING_TRIE

  if flag(dep-case-insensitive) || flag(all)
    build-depends: case-insensitive ^>= 1.2.0
    cpp-options: -DDEP_CASE_INSENSITIVE

  if flag(dep-comonad) || flag(all)
    build-depends: comonad ^>= 5.0
    cpp-options: -DDEP_COMONAD

  if flag(dep-compact) || flag(all)
    build-depends: compact ^>= 0.1.0
    cpp-options: -DDEP_COMPACT

  if flag(dep-constraints) || flag(all)
    build-depends: constraints ^>= 0.10
    cpp-options: -DDEP_CONSTRAINTS

  if flag(dep-containers) || flag(all)
    build-depends: containers ^>= 0.5.11
    cpp-options: -DDEP_CONTAINERS

  if flag(dep-contravariant) || flag(all)
    build-depends: contravariant ^>= 1.4.1
    cpp-options: -DDEP_CONTRAVARIANT

  if flag(dep-contravariant-extras) || flag(all)
    build-depends: contravariant-extras ^>= 0.3.4
    cpp-options: -DDEP_CONTRAVARIANT_EXTRAS

  if flag(dep-deepseq) || flag(all)
    build-depends: deepseq ^>= 1.4.3
    cpp-options: -DDEP_DEEPSEQ

  if flag(dep-directory) || flag(all)
    build-depends: directory ^>= 1.3.3
    cpp-options: -DDEP_DIRECTORY

  if flag(dep-distributive) || flag(all)
    build-depends: distributive ^>= 0.5.3
    cpp-options: -DDEP_DISTRIBUTIVE

  if flag(dep-dlist) || flag(all)
    build-depends: dlist ^>= 0.8.0
    cpp-options: -DDEP_DLIST

  if flag(dep-earley) || flag(all)
    build-depends: Earley ^>= 0.12.0
    cpp-options: -DDEP_EARLEY

  if flag(dep-envparse) || flag(all)
    build-depends: envparse ^>= 0.4
    cpp-options: -DDEP_ENVPARSE

  if flag(dep-erf) || flag(all)
    build-depends: erf ^>= 2.0.0
    cpp-options: -DDEP_ERF

  if flag(dep-extra) || flag(all)
    build-depends: extra ^>= 1.6.8
    cpp-options: -DDEP_EXTRA

  if flag(dep-fgl) || flag(all)
    build-depends: fgl ^>= 5.6.0
    cpp-options: -DDEP_FGL

  if flag(dep-filepath) || flag(all)
    build-depends: filepath ^>= 1.4.2
    cpp-options: -DDEP_FILEPATH

  if flag(dep-foldl) || flag(all)
    build-depends: foldl ^>= 1.4.0
    cpp-options: -DDEP_FOLDL

  if flag(dep-gauge) || flag(all)
    build-depends: gauge ^>= 0.2.1
    cpp-options: -DDEP_GAUGE

  if flag(dep-generic-aeson) || flag(all)
    build-depends: generic-aeson ^>= 0.2.0.9
    cpp-options: -DDEP_GENERIC_AESON

  if flag(dep-half) || flag(all)
    build-depends: half ^>= 0.3
    cpp-options: -DDEP_HALF

  if flag(dep-hashable) || flag(all)
    build-depends: hashable ^>= 1.2.7
    cpp-options: -DDEP_HASHABLE

  if flag(dep-heaps) || flag(all)
    build-depends: heaps ^>= 0.3.0
    cpp-options: -DDEP_HEAPS

  if flag(dep-hedgehog) || flag(all)
    build-depends: hedgehog ^>= 0.5.3 || ^>= 0.6
    cpp-options: -DDEP_HEDGEHOG

  if flag(dep-lens) || flag(all)
    build-depends: lens ^>= 4.16.1
    cpp-options: -DDEP_LENS

  if flag(dep-lens-aeson) || flag(all)
    build-depends: lens-aeson ^>= 1.0.2
    cpp-options: -DDEP_LENS_AESON

  if flag(dep-list-transformer) || flag(all)
    build-depends: list-transformer ^>= 1.0.4
    cpp-options: -DDEP_LIST_TRANSFORMER

  if flag(dep-logict) || flag(all)
    build-depends: logict ^>= 0.6.0
    cpp-options: -DDEP_LOGICT

  if flag(dep-managed) || flag(all)
    build-depends: managed ^>= 1.0.6
    cpp-options: -DDEP_MANAGED

  if flag(dep-megaparsec) || flag(all)
    build-depends: megaparsec ^>= 6.5.0
    cpp-options: -DDEP_MEGAPARSEC

  if flag(dep-mmorph) || flag(all)
    build-depends: mmorph ^>= 1.1.2
    cpp-options: -DDEP_MMORPH

  if flag(dep-monad-ste) || flag(all)
    build-depends: monad-ste ^>= 0.1.0
    cpp-options: -DDEP_MONAD_STE

  if flag(dep-mtl) || flag(all)
    build-depends: mtl ^>= 2.2.2
    cpp-options: -DDEP_MTL

  if flag(dep-multiset) || flag(all)
    build-depends: multiset ^>= 0.3.4
    cpp-options: -DDEP_MULTISET

  if flag(dep-mwc-random) || flag(all)
    build-depends: mwc-random ^>= 0.13.6
    cpp-options: -DDEP_MWC_RANDOM

  if flag(dep-network) || flag(all)
    build-depends: network ^>= 2.7.0
    cpp-options: -DDEP_NETWORK

  if flag(dep-network-uri) || flag(all)
    build-depends: network-uri ^>= 2.6.1
    cpp-options: -DDEP_NETWORK_URI

  if flag(dep-nf) || flag(all)
    build-depends: nf ^>= 1.0.1
    cpp-options: -DDEP_NF

  if flag(dep-optparse-applicative) || flag(all)
    build-depends: optparse-applicative ^>= 0.14.2
    cpp-options: -DDEP_OPTPARSE_APPLICATIVE

  if flag(dep-parallel) || flag(all)
    build-depends: parallel ^>= 3.2.1
    cpp-options: -DDEP_PARALLEL

  if flag(dep-prettyprinter) || flag(all)
    build-depends: prettyprinter ^>= 1.2.0
    cpp-options: -DDEP_PRETTYPRINTER

  if flag(dep-primitive) || flag(all)
    build-depends: primitive ^>= 0.6.4
    cpp-options: -DDEP_PRIMITIVE

  if flag(dep-profunctors) || flag(all)
    build-depends: profunctors ^>= 5.2
    cpp-options: -DDEP_PROFUNCTORS

  if flag(dep-psqueues) || flag(all)
    build-depends: psqueues ^>= 0.2.7
    cpp-options: -DDEP_PSQUEUES

  if flag(dep-reactive-banana) || flag(all)
    build-depends: reactive-banana ^>= 1.2.0
    cpp-options: -DDEP_REACTIVE_BANANA

  if flag(dep-reflection) || flag(all)
    build-depends: reflection ^>= 2.1
    cpp-options: -DDEP_REFLECTION

  if flag(dep-regex-applicative) || flag(all)
    build-depends: regex-applicative ^>= 0.3.3
    cpp-options: -DDEP_REGEX_APPLICATIVE

  if flag(dep-safe-exceptions) || flag(all)
    build-depends: safe-exceptions ^>= 0.1.7
    cpp-options: -DDEP_SAFE_EXCEPTIONS

  if flag(dep-scientific) || flag(all)
    build-depends: scientific ^>= 0.3.6
    cpp-options: -DDEP_SCIENTIFIC

  if flag(dep-semigroups) || flag(all)
    build-depends: semigroups ^>= 0.18.4
    cpp-options: -DDEP_SEMIGROUPS

  if flag(dep-semilattices) || flag(all)
    build-depends: semilattices ^>= 0.0.0
    cpp-options: -DDEP_SEMILATTICES

  if flag(dep-stm) || flag(all)
    build-depends: stm ^>= 2.4.5
    cpp-options: -DDEP_STM

  if flag(dep-stm-chans) || flag(all)
    build-depends: stm-chans ^>= 3.0.0
    cpp-options: -DDEP_STM_CHANS

  if flag(dep-stm-containers) || flag(all)
    build-depends: stm-containers ^>= 0.2.16
    cpp-options: -DDEP_STM_CONTAINERS

  if flag(dep-tagged) || flag(all)
    build-depends: tagged ^>= 0.8.5
    cpp-options: -DDEP_TAGGED

  if flag(dep-text) || flag(all)
    build-depends: text ^>= 1.2.3
    cpp-options: -DDEP_TEXT

  if flag(dep-text-short) || flag(all)
    build-depends: text-short ^>= 0.1.2
    cpp-options: -DDEP_TEXT_SHORT

  if flag(dep-time) || flag(all)
    build-depends: time ^>= 1.8 || ^>= 1.9.1
    cpp-options: -DDEP_TIME

  if flag(dep-transformers) || flag(all)
    build-depends: transformers ^>= 0.5.5
    cpp-options: -DDEP_TRANSFORMERS

  if flag(dep-transformers-base) || flag(all)
    build-depends: transformers-base ^>= 0.4.5
    cpp-options: -DDEP_TRANSFORMERS_BASE

  if flag(dep-typed-process) || flag(all)
    build-depends: typed-process ^>= 0.2.2
    cpp-options: -DDEP_TYPED_PROCESS

  if flag(dep-unagi-chan) || flag(all)
    build-depends: unagi-chan ^>= 0.4.1
    cpp-options: -DDEP_UNAGI_CHAN

  if flag(dep-unix) || flag(all)
    build-depends: unix ^>= 2.7.2
    cpp-options: -DDEP_UNIX

  if flag(dep-unliftio) || flag(all)
    build-depends: unliftio ^>= 0.2.7.0
    cpp-options: -DDEP_UNLIFTIO

  if flag(dep-unordered-containers) || flag(all)
    build-depends: unordered-containers ^>= 0.2.9
    cpp-options: -DDEP_UNORDERED_CONTAINERS

  if flag(dep-vector) || flag(all)
    build-depends: vector ^>= 0.12.0
    cpp-options: -DDEP_VECTOR

  if flag(dep-weigh) || flag(all)
    build-depends: weigh ^>= 0.0.12
    cpp-options: -DDEP_WEIGH

  if flag(dep-writer-cps-mtl) || flag(all)
    build-depends: writer-cps-mtl ^>= 0.1.1
    cpp-options: -DDEP_WRITER_CPS_MTL

  ------------------------------------------------------------------------------
  -- Exposed modules
  ------------------------------------------------------------------------------

  exposed-modules:
    Ala.Const
    Ala.Identity
    Ala.Product
    Ala.Sum
    Alternative
    Applicative
    Bifoldable
    Bifoldable.Partial
    Bifunctor
    Bitraversable
    Bits
    Bool
    Bounded
    Category
    Char
    Char.Partial
    Clock
    Coerce
    Coerce.Unsafe
    Compose
    Concurrency
    Data
    Debug
    Dynamic
    Either
    Enum
    Environment
    Equality
    Error
    Eval
    Exception
    Field
    File
    File.Text
    Foldable
    Foldable.Partial
    Function
    Functor
    Generic
    IO
    IO.Unsafe
    IORef
    Ix
    Label
    List
    List.Partial
    List1
    List1.Partial
    MVar
    Maybe
    Maybe.Partial
    Mitchell
    Monad
    Monad.Fail
    Monad.Fix
    Monad.Plus
    Monad.Zip
    Monoid
    Numeric.Complex
    Numeric.Double
    Numeric.Floating
    Numeric.Fractional
    Numeric.Int
    Numeric.Int8
    Numeric.Int16
    Numeric.Int32
    Numeric.Int64
    Numeric.Integer
    Numeric.Integral
    Numeric.Float
    Numeric.Nat
    Numeric.Natural
    Numeric.Num
    Numeric.Product
    Numeric.Ratio
    Numeric.Real
    Numeric.RealFloat
    Numeric.RealFrac
    Numeric.Sum
    Numeric.Word
    Numeric.Word8
    Numeric.Word16
    Numeric.Word32
    Numeric.Word64
    Ord
    Parallelism
    Posix
    Printf
    Proxy
    Ptr
    Ptr.Foreign
    Ptr.Fun
    Ptr.Stable
    Ptr.Static
    Ptr.Weak
    QSem
    RTS
    Read
    Read.Partial
    ST
    Semigroup
    Show
    StableName
    Storable
    Symbol
    System
    Traversable
    Tuple
    Type
    Typeable
    Unique
    Version
    Void

  if flag(dep-aeson) || flag(all)
    exposed-modules:
      Json
      Json.Decode
      Json.Encode

  if flag(dep-ansi-terminal) || flag(all)
    exposed-modules:
      Terminal

  if flag(dep-approximate) || flag(all)
    exposed-modules:
      Numeric.Approximate
      Numeric.Fast

  if flag(dep-array) || flag(all)
    exposed-modules:
      Array
      Array.Partial

  if flag(dep-atomic-primops) || flag(all)
    exposed-modules:
      Counter

  if flag(dep-base16-bytestring) || flag(all)
    exposed-modules:
      ByteString.Base16
      ByteString.Lazy.Base16

  if flag(dep-bytestring) || flag(all)
    exposed-modules:
      ByteString
      ByteString.Partial
      ByteString.Short
      ByteString.Lazy
      ByteString.Lazy.Latin1
      ByteString.Latin1

  if flag(dep-bytestring) || flag(dep-unliftio) || flag(all)
    exposed-modules:
      File.Binary

  if flag(dep-bytestring-trie) || flag(all)
    exposed-modules:
      Trie

  if flag(dep-case-insensitive) || flag(all)
    exposed-modules:
      CaseInsensitive

  if flag(dep-comonad) || flag(all)
    exposed-modules:
      Comonad

  if flag(dep-compact) || flag(all)
    exposed-modules:
      Compact

  if flag(dep-constraints) || flag(all)
    exposed-modules:
      Constraint

  if flag(dep-contravariant) || flag(all)
    exposed-modules:
      Contravariant
      Predicate

  if flag(dep-contravariant) || flag(dep-contravariant-extras) || flag(all)
    exposed-modules:
      Decidable
      Divisible

  if flag(dep-containers) || flag(all)
    exposed-modules:
      Graph.Adjacency
      Map
      Map.Int
      Map.Int.Lazy
      Map.Lazy
      Sequence
      Set
      Set.Int
      Tree

  if flag(dep-distributive) || flag(all)
    exposed-modules:
      Distributive

  if flag(dep-dlist) || flag(all)
    exposed-modules:
      DList
      DList.Partial

  if flag(dep-earley) || flag(all)
    exposed-modules:
      Parser.Earley

  if flag(dep-envparse) || flag(all)
    exposed-modules:
      Parser.Env

  if flag(dep-erf) || flag(all)
    exposed-modules:
      Numeric.Erf
      Numeric.InvErf

  if flag(dep-fgl) || flag(all)
    exposed-modules:
      Graph.Inductive

  if flag(dep-foldl) || flag(all)
    exposed-modules:
      Foldl

  if flag(dep-gauge) || flag(all)
    exposed-modules:
      Benchmark

  if flag(dep-half) || flag(all)
    exposed-modules:
      Numeric.Half

  if flag(dep-hashable) || flag(all)
    exposed-modules:
      Hashable

  if flag(dep-heaps) || flag(all)
    exposed-modules:
      Heap

  if flag(dep-hedgehog) || flag(all)
    exposed-modules:
      Test
      Test.Gen
      Test.Range

  if flag(dep-lens) || flag(all)
    exposed-modules:
      At
      Cons
      Each
      Empty
      Optic.Fold
      Optic.Getter
      Optic.Getting
      Optic.Iso
      Optic.Lens
      Optic.Prism
      Optic.Traversal

  if flag(dep-list-transformer) || flag(all)
    exposed-modules:
      ListT

  if flag(dep-logict) || flag(all)
    exposed-modules:
      Logic

  if flag(dep-optparse-applicative) || flag(all)
    exposed-modules:
      Parser.Cli

  if flag(dep-prettyprinter) || flag(all)
    exposed-modules:
      Pretty

  if flag(dep-primitive) || flag(all)
    exposed-modules:
      Prim

  if flag(dep-psqueues) || flag(all)
    exposed-modules:
      PSQ.Hash
      PSQ.Int
      PSQ.Ord

  if flag(dep-managed) || flag(all)
    exposed-modules:
      Managed

  if flag(dep-megaparsec) || flag(all)
    exposed-modules:
      Parser.Text
      Parser.Binary

  if flag(dep-mmorph) || flag(all)
    exposed-modules:
      MFunctor
      MMonad

  if flag(dep-mtl) || flag(dep-transformers) || flag(all)
    exposed-modules:
      Cont
      Except
      Reader
      State

  if flag(dep-multiset) || flag(all)
    exposed-modules:
      MultiSet
      MultiSet.Int

  if flag(dep-mwc-random) || flag(all)
    exposed-modules:
      Random

  if flag(dep-network) || flag(all)
    exposed-modules:
      Socket

  if flag(dep-network-uri) || flag(all)
    exposed-modules:
      URI

  if flag(dep-profunctors) || flag(all)
    exposed-modules:
      Profunctor

  if flag(dep-reactive-banana) || flag(all)
    exposed-modules:
      FRP

  if flag(dep-reflection) || flag(all)
    exposed-modules:
      Reflection

  if flag(dep-regex-applicative) || flag(all)
    exposed-modules:
      Regex

  if flag(dep-scientific) || flag(all)
    exposed-modules:
      Numeric.Scientific

  if flag(dep-semilattices) || flag(all)
    exposed-modules:
      Semilattice

  if flag(dep-stm) || flag(all)
    exposed-modules:
      STM.TSem

  if flag(dep-stm) || flag(dep-unliftio) || flag(all)
    exposed-modules:
      STM.TBQueue
      STM.TChan
      STM.TMVar
      STM.TVar

  if flag(dep-stm-chans) || flag(all)
    exposed-modules:
      STM.TBChan
      STM.TBMChan
      STM.TBMQueue
      STM.TMChan
      STM.TMQueue

  if flag(dep-stm-containers) || flag(all)
    exposed-modules:
      STM.TBimap
      STM.TMap
      STM.TMultimap
      STM.TSet

  if flag(dep-tagged) || flag(all)
    exposed-modules:
      Tagged

  if flag(dep-text) || flag(all)
    exposed-modules:
      Text
      Text.Lazy
      Text.Partial

  if flag(dep-text-short) || flag(all)
    exposed-modules:
      Text.Short
      Text.Short.Partial
      Text.Short.Unsafe

  if flag(dep-time) || flag(all)
    exposed-modules:
      Time

  if flag(dep-transformers) || flag(all)
    exposed-modules:
      MaybeT
      Monad.Trans

  if flag(dep-transformers-base) || flag(all)
    exposed-modules:
      Monad.Base

  if flag(dep-typed-process) || flag(dep-unix) || flag(all)
    exposed-modules:
      Process

  if flag(dep-unagi-chan) || flag(all)
    exposed-modules:
      Chan

  if flag(dep-unordered-containers) || flag(all)
    exposed-modules:
      Map.Hash
      Set.Hash

  if flag(dep-vector) || flag(all)
    exposed-modules:
      Vector
      Vector.Generic
      Vector.Mutable
      Vector.Primitive
      Vector.Storable
      Vector.Unboxed

  if flag(dep-weigh) || flag(all)
    exposed-modules:
      Weigh

  if flag(dep-writer-cps-mtl) || flag(all)
    exposed-modules:
      Writer

--------------------------------------------------------------------------------
-- Benchmarks
--------------------------------------------------------------------------------

benchmark semaphore
  hs-source-dirs: bench
  main-is: Semaphore.hs
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  ghc-options: -O -rtsopts -threaded "-with-rtsopts=-N4 -qg"
  build-depends: mitchell-stdlib
  default-language: Haskell2010
