cabal-version: 2.0

author: Mitchell Rosen
build-type: Simple
category: Prelude
description:
  Planet Mitchell.
  .
  This package provides a curated, highly unstable collection of reorganized
  re-exports. Mostly for personal use at the moment, me but please poke around
  and see README.md for a bit more information ;)
license-file: LICENSE
license: BSD3
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: planet-mitchell
synopsis: Planet Mitchell
tested-with: GHC == 8.4.3
version: 0.0.0
homepage: https://github.com/mitchellwrosen/planet-mitchell
bug-reports: https://github.com/mitchellwrosen/planet-mitchell/issues
copyright: (c) 2018, Mitchell Rosen

extra-source-files:
  .travis.yml
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/planet-mitchell.git

library
  hs-source-dirs: src
  ghc-options:
    -Weverything
    -fno-warn-safe
    -fno-warn-unsafe
    -- TODO re-enable
    -fno-warn-missing-import-lists
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

  -- Reexport base for convenience. Some of these are actually required for
  -- various purposes:
  --
  --   Control.Monad      -- :main
  --   Control.Exception  -- Paths_
  --   Data.Version       -- Paths_
  --   GHC.Base           -- ghci
  --   Prelude            -- Paths_
  --   System.Environment -- ghci
  --   System.IO          -- ghci
  reexported-modules:
      base:Control.Applicative
    , base:Control.Arrow
    , base:Control.Category
    , base:Control.Concurrent
    , base:Control.Concurrent.Chan
    , base:Control.Concurrent.MVar
    , base:Control.Concurrent.QSem
    , base:Control.Concurrent.QSemN
    , base:Control.Exception
    , base:Control.Exception.Base
    , base:Control.Monad
    , base:Control.Monad.Fail
    , base:Control.Monad.Fix
    , base:Control.Monad.Instances
    , base:Control.Monad.IO.Class
    , base:Control.Monad.ST
    , base:Control.Monad.ST.Lazy
    , base:Control.Monad.ST.Lazy.Safe
    , base:Control.Monad.ST.Lazy.Unsafe
    , base:Control.Monad.ST.Safe
    , base:Control.Monad.ST.Strict
    , base:Control.Monad.ST.Unsafe
    , base:Control.Monad.Zip
    , base:Data.Bifoldable
    , base:Data.Bifunctor
    , base:Data.Bitraversable
    , base:Data.Bits
    , base:Data.Bool
    , base:Data.Char
    , base:Data.Coerce
    , base:Data.Complex
    , base:Data.Data
    , base:Data.Dynamic
    , base:Data.Either
    , base:Data.Eq
    , base:Data.Fixed
    , base:Data.Foldable
    , base:Data.Function
    , base:Data.Functor
    , base:Data.Functor.Classes
    , base:Data.Functor.Compose
    , base:Data.Functor.Const
    , base:Data.Functor.Identity
    , base:Data.Functor.Product
    , base:Data.Functor.Sum
    , base:Data.IORef
    , base:Data.Int
    , base:Data.Ix
    , base:Data.Kind
    , base:Data.List
    , base:Data.List.NonEmpty
    , base:Data.Maybe
    , base:Data.Monoid
    , base:Data.Ord
    , base:Data.Proxy
    , base:Data.Ratio
    , base:Data.Semigroup
    , base:Data.STRef
    , base:Data.STRef.Lazy
    , base:Data.STRef.Strict
    , base:Data.String
    , base:Data.Traversable
    , base:Data.Tuple
    , base:Data.Type.Bool
    , base:Data.Type.Coercion
    , base:Data.Type.Equality
    , base:Data.Typeable
    , base:Data.Unique
    , base:Data.Version
    , base:Data.Void
    , base:Data.Word
    , base:Debug.Trace
    , base:Foreign
    , base:Foreign.C
    , base:Foreign.C.Error
    , base:Foreign.C.String
    , base:Foreign.C.Types
    , base:Foreign.Concurrent
    , base:Foreign.ForeignPtr
    , base:Foreign.ForeignPtr.Safe
    , base:Foreign.ForeignPtr.Unsafe
    , base:Foreign.Marshal
    , base:Foreign.Marshal.Alloc
    , base:Foreign.Marshal.Array
    , base:Foreign.Marshal.Error
    , base:Foreign.Marshal.Pool
    , base:Foreign.Marshal.Safe
    , base:Foreign.Marshal.Unsafe
    , base:Foreign.Marshal.Utils
    , base:Foreign.Ptr
    , base:Foreign.Safe
    , base:Foreign.StablePtr
    , base:Foreign.Storable
    , base:GHC.Arr
    , base:GHC.Base
    , base:GHC.Char
    , base:GHC.Conc
    , base:GHC.Conc.IO
    , base:GHC.Conc.Signal
    , base:GHC.Conc.Sync
    , base:GHC.ConsoleHandler
    , base:GHC.Constants
    , base:GHC.Desugar
    , base:GHC.Enum
    , base:GHC.Environment
    , base:GHC.Err
    , base:GHC.Exception
    , base:GHC.ExecutionStack
    , base:GHC.ExecutionStack.Internal
    , base:GHC.Exts
    , base:GHC.Fingerprint
    , base:GHC.Fingerprint.Type
    , base:GHC.Float
    , base:GHC.Float.ConversionUtils
    , base:GHC.Float.RealFracMethods
    , base:GHC.Foreign
    , base:GHC.ForeignPtr
    , base:GHC.GHCi
    , base:GHC.Generics
    , base:GHC.IO
    , base:GHC.IO.Buffer
    , base:GHC.IO.BufferedIO
    , base:GHC.IO.Device
    , base:GHC.IO.Encoding
    , base:GHC.IO.Encoding.CodePage
    , base:GHC.IO.Encoding.Failure
    , base:GHC.IO.Encoding.Iconv
    , base:GHC.IO.Encoding.Latin1
    , base:GHC.IO.Encoding.Types
    , base:GHC.IO.Encoding.UTF16
    , base:GHC.IO.Encoding.UTF32
    , base:GHC.IO.Encoding.UTF8
    , base:GHC.IO.Exception
    , base:GHC.IO.FD
    , base:GHC.IO.Handle
    , base:GHC.IO.Handle.FD
    , base:GHC.IO.Handle.Internals
    , base:GHC.IO.Handle.Lock
    , base:GHC.IO.Handle.Text
    , base:GHC.IO.Handle.Types
    , base:GHC.IO.IOMode
    , base:GHC.IO.Unsafe
    , base:GHC.IOArray
    , base:GHC.IORef
    , base:GHC.Int
    , base:GHC.List
    , base:GHC.MVar
    , base:GHC.Natural
    , base:GHC.Num
    , base:GHC.OldList
    , base:GHC.OverloadedLabels
    , base:GHC.Pack
    , base:GHC.Profiling
    , base:GHC.Ptr
    , base:GHC.Read
    , base:GHC.Real
    , base:GHC.Records
    , base:GHC.RTS.Flags
    , base:GHC.ST
    , base:GHC.StaticPtr
    , base:GHC.STRef
    , base:GHC.Show
    , base:GHC.Stable
    , base:GHC.Stack
    , base:GHC.Stack.CCS
    , base:GHC.Stack.Types
    , base:GHC.Stats
    , base:GHC.Storable
    , base:GHC.TopHandler
    , base:GHC.TypeLits
    , base:GHC.TypeNats
    , base:GHC.Unicode
    , base:GHC.Weak
    , base:GHC.Word
    , base:Numeric
    , base:Numeric.Natural as Base.Numeric.Natural
    , base:Prelude
    , base:System.CPUTime
    , base:System.Console.GetOpt
    , base:System.Environment
    , base:System.Exit
    , base:System.IO
    , base:System.IO.Error
    , base:System.IO.Unsafe
    , base:System.Info
    , base:System.Mem
    , base:System.Mem.StableName
    , base:System.Mem.Weak
    , base:System.Posix.Internals
    , base:System.Posix.Types
    , base:System.Timeout
    , base:Text.ParserCombinators.ReadP
    , base:Text.ParserCombinators.ReadPrec
    , base:Text.Printf
    , base:Text.Read
    , base:Text.Read.Lex
    , base:Text.Show
    , base:Text.Show.Functions
    , base:Type.Reflection
    , base:Type.Reflection.Unsafe
    , base:Unsafe.Coerce
  if impl(ghc >= 8.4)
    reexported-modules:
        base:GHC.ByteOrder
      , base:GHC.Clock
      , base:System.Environment.Blank
  if impl(ghc < 8.6)
    reexported-modules:
        base:GHC.PArr
  -- TODO: Add new 8.6 modules

  build-depends:
      aeson ^>= 1.3.1 || ^>= 1.4.0
    , base ^>= 4.10 || ^>= 4.11
    , base-orphans ^>= 0.8
    , aeson-pretty ^>= 0.8.7
    , aeson-qq ^>= 0.8.2
    , ansi-terminal ^>= 0.8.0
    , approximate ^>= 0.3.1
    , array ^>= 0.5.2
    , async ^>= 2.2.1
    , atomic-primops ^>= 0.8
    , base16-bytestring ^>= 0.1.1
    , bits ^>= 0.5.0
    , bytestring ^>= 0.10.8
    , bytestring-lexing ^>= 0.5.0
    , case-insensitive ^>= 1.2.0
    , cborg ^>= 0.2.0
    , comonad ^>= 5.0
    , compact ^>= 0.1.0
    , constraints ^>= 0.10
    , containers ^>= 0.5.11
    , contravariant ^>= 1.4.1
    , contravariant-extras ^>= 0.3.4
    , deepseq ^>= 1.4.3
    , distributive ^>= 0.5.3
    , dlist ^>= 0.8.0
    , double-conversion ^>= 2.0.2.0
    , Earley ^>= 0.12.0
    , envparse ^>= 0.4
    , erf ^>= 2.0.0
    , exceptions ^>= 0.10.0
    , extra ^>= 1.6.9 || ^>= 1.6.10 || ^>= 1.6.11
    , fgl ^>= 5.6.0
    , filepath ^>= 1.4.2
    , foldl ^>= 1.4.0
    , free ^>= 5.1
    , gauge ^>= 0.2.1
    , generic-aeson ^>= 0.2.0.9
    , half ^>= 0.3
    , hashable ^>= 1.2.7
    , heaps ^>= 0.3.0
    , hedgehog ^>= 0.5.3 || ^>= 0.6
    , integer-logarithms ^>= 1.0.2
    , lens ^>= 4.16.1
    , lens-aeson ^>= 1.0.2
    , list-transformer ^>= 1.0.4
    , logict ^>= 0.6.0
    , managed ^>= 1.0.6
    , megaparsec ^>= 6.5.0
    , mmorph ^>= 1.1.2
    , monad-ste ^>= 0.1.0
    , mtl ^>= 2.2.2
    , multiset ^>= 0.3.4
    , mwc-random ^>= 0.13.6
    , network ^>= 2.7.0
    , network-info ^>= 0.2.0
    , network-uri ^>= 2.6.1
    , nf ^>= 1.0.1
    , optparse-applicative ^>= 0.14.2
    , parallel ^>= 3.2.1
    , parser-combinators ^>= 1.0.0
    , pointed ^>= 5.0.1
    , prettyprinter ^>= 1.2.0
    , prettyprinter-ansi-terminal ^>= 1.1.1
    , primitive ^>= 0.6.4
    , profunctors ^>= 5.2 || ^>= 5.3
    , psqueues ^>= 0.2.7
    , reactive-banana ^>= 1.2.0
    , reflection ^>= 2.1
    , regex-applicative ^>= 0.3.3
    , scientific ^>= 0.3.6
    , semigroupoids ^>= 5.3.1
    , semigroups ^>= 0.18.4
    , semilattices ^>= 0.0.0
    , serialise ^>= 0.2.0
    , split ^>= 0.2.3.3
    , stm ^>= 2.4.5
    , stm-chans ^>= 3.0.0
    , stm-containers ^>= 0.2.16
    , tagged ^>= 0.8.5
    , text ^>= 1.2.3
    , text-short ^>= 0.1.2
    , time ^>= 1.8 || ^>= 1.9.1
    , transformers ^>= 0.5.5
    , transformers-base ^>= 0.4.5
    , transformers-compat ^>= 0.6.2
    , typed-process ^>= 0.2.2
    , unagi-chan ^>= 0.4.1
    , unix ^>= 2.7.2
    , unliftio ^>= 0.2.7.0
    , unordered-containers ^>= 0.2.9
    , utf8-string ^>= 1.0.1.1
    , uuid ^>= 1.3.13
    , uuid-types ^>= 1.0.3
    , vault ^>= 0.3.1
    , vector ^>= 0.12.0
    , vector-builder ^>= 0.3.6
    , weigh ^>= 0.0.12
    , writer-cps-mtl ^>= 0.1.1

  exposed-modules:
    Ala.Compose
    Ala.Const
    Ala.Identity
    Ala.Product
    Ala.Sum
    Applicative
    Array
    Array.Partial
    Benchmark
    Bifoldable
    Bifoldable.Partial
    Bifunctor
    Bitraversable
    Bits
    Bool
    Bounded
    ByteString
    ByteString.Base16
    ByteString.Latin1
    ByteString.Latin1.Partial
    ByteString.Lazy
    ByteString.Lazy.Base16
    ByteString.Lazy.Latin1
    ByteString.Lazy.Utf8
    ByteString.Partial
    ByteString.Short
    ByteString.Short.Partial
    ByteString.Utf8
    CaseInsensitive
    Category
    Char
    Char.Partial
    Clock
    Coerce
    Coerce.Unsafe
    Comonad
    CompactRegion
    Concurrency
    Concurrency.Chan
    Concurrency.Counter
    Concurrency.IORef
    Concurrency.MVar
    Concurrency.QSem
    Concurrency.TBChan
    Concurrency.TBMChan
    Concurrency.TBMQueue
    Concurrency.TBQueue
    Concurrency.TBimap
    Concurrency.TChan
    Concurrency.TMChan
    Concurrency.TMQueue
    Concurrency.TMVar
    Concurrency.TMap
    Concurrency.TMultimap
    Concurrency.TSem
    Concurrency.TSet
    Concurrency.TVar
    Constraint
    Cont
    Contravariant
    Copointed
    Data
    Debug
    Decidable
    Distributive
    Divisible
    Dynamic
    Either
    Enum
    Environment
    Equality
    Error
    Eval
    Except
    Exception
    FRP
    Field
    File
    File.Binary
    File.Text
    Foldable
    Foldable.Partial
    Foldl
    Function
    Functor
    Generic
    Graph.Adjacency
    Graph.Inductive
    Groupoid
    Hashable
    Heap
    IO
    IO.Unsafe
    Ix
    Json
    Json.Decode
    Json.Encode
    Label
    List
    List.Builder
    List.Builder.Partial
    List.Partial
    List1
    List1.Partial
    ListT
    Logic
    Managed
    Map
    Map.Hash
    Map.Int
    Map.Int.Lazy
    Map.Lazy
    Maybe
    Maybe.Partial
    MaybeT
    Mitchell.Prelude
    Monad
    Monad.Base
    Monad.Fail
    Monad.Fix
    Monad.Plus
    Monad.Trans
    Monad.Zip
    Monoid
    MultiSet
    MultiSet.Int
    Numeric.Approximate
    Numeric.Complex
    Numeric.Double
    Numeric.Erf
    Numeric.Fast
    Numeric.Float
    Numeric.Floating
    Numeric.Fractional
    Numeric.Half
    Numeric.Int
    Numeric.Integer
    Numeric.Integral
    Numeric.InvErf
    Numeric.Nat
    Numeric.Natural
    Numeric.Num
    Numeric.Product
    Numeric.Ratio
    Numeric.Real
    Numeric.RealFloat
    Numeric.RealFrac
    Numeric.Scientific
    Numeric.Sum
    Numeric.Word
    Optic.Fold
    Optic.Getter
    Optic.Getting
    Optic.Iso
    Optic.Iso.Reversing
    Optic.Iso.Strict
    Optic.Lens
    Optic.Lens.At
    Optic.Lens.Contains
    Optic.Prism
    Optic.Prism.Cons
    Optic.Prism.Empty
    Optic.Prism.Snoc
    Optic.Review
    Optic.Setter
    Optic.Traversal
    Optic.Traversal.Each
    Optic.Traversal.Ixed
    Ord
    Parallelism
    Parser.Binary
    Parser.Cli
    Parser.Earley
    Parser.Env
    Parser.Text
    Pointed
    Posix
    Predicate
    Pretty
    Prim
    Printf
    Process
    Profunctor
    Proxy
    Ptr
    Ptr.Foreign
    Ptr.Fun
    Ptr.Stable
    Ptr.Static
    Ptr.Weak
    Queue.Prio.Hash
    Queue.Prio.Int
    Queue.Prio.Ord
    Random
    Read
    Read.Partial
    Reader
    Reflection
    Regex
    RuntimeSystem
    ST
    Semigroup
    Semigroupoid
    Semilattice
    Sequence
    Serialise
    Set
    Set.Hash
    Set.Int
    Show
    Socket
    StableName
    State
    Storable
    Symbol
    System
    Tagged
    Terminal
    Test
    Test.Gen
    Test.Range
    Text
    Text.Lazy
    Text.Lazy.Builder
    Text.Partial
    Text.Short
    Text.Short.Partial
    Text.Short.Unsafe
    Time
    Traversable
    Tree
    Tuple
    Type
    Typeable
    URI
    UUID
    Unique
    Vault
    Vault.Lazy
    Vector
    Vector.Builder
    Vector.Generic
    Vector.Generic.Mutable
    Vector.Mutable
    Vector.Primitive
    Vector.Storable
    Vector.Unboxed
    Void
    Weigh
    Writer

-- benchmark semaphore
--   hs-source-dirs: bench
--   main-is: Semaphore.hs
--   ghc-options: -Wall
--   type: exitcode-stdio-1.0
--   ghc-options: -O -rtsopts -threaded "-with-rtsopts=-N4 -qg"
--   build-depends: planet-mitchell
--   default-language: Haskell2010
